[gd_scene load_steps=10 format=2]

[ext_resource path="res://resources/Fishbowl/pecera.dae" type="PackedScene" id=1]
[ext_resource path="res://src/Fishbowl.gd" type="Script" id=2]
[ext_resource path="res://resources/Fishbowl/normal.material" type="Material" id=3]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 1, 0.05, 1 )

[sub_resource type="BoxShape" id=2]
extents = Vector3( 1, 0.05, 1 )

[sub_resource type="BoxShape" id=3]
extents = Vector3( 0.05, 1, 1 )

[sub_resource type="BoxShape" id=4]
extents = Vector3( 0.05, 1, 1 )

[sub_resource type="BoxShape" id=5]
extents = Vector3( 1, 1, 0.05 )

[sub_resource type="BoxShape" id=6]
extents = Vector3( 1, 1, 0.05 )

[node name="BowlSpatial" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="Camera" parent="." index="0"]
visible = false

[node name="Pecera" parent="." index="1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
material/0 = ExtResource( 3 )

[node name="Sphere" parent="." index="2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )

[node name="RB_Bowl1" type="RigidBody" parent="." index="4"]
collision_layer = 16
collision_mask = 0
can_sleep = false

[node name="CollisionShape" type="CollisionShape" parent="RB_Bowl1" index="0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.7, 0 )
shape = SubResource( 1 )
disabled = true

[node name="RB_Bowl2" type="RigidBody" parent="." index="5"]
editor/display_folded = true
collision_layer = 16
collision_mask = 0
can_sleep = false

[node name="CollisionShape" type="CollisionShape" parent="RB_Bowl2" index="0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.7, 0 )
shape = SubResource( 2 )

[node name="RB_Bowl3" type="RigidBody" parent="." index="6"]
editor/display_folded = true
collision_layer = 16
collision_mask = 0
can_sleep = false

[node name="CollisionShape" type="CollisionShape" parent="RB_Bowl3" index="0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.7, 0, 0 )
shape = SubResource( 3 )

[node name="RB_Bowl4" type="RigidBody" parent="." index="7"]
editor/display_folded = true
collision_layer = 16
collision_mask = 0
can_sleep = false

[node name="CollisionShape" type="CollisionShape" parent="RB_Bowl4" index="0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.7, 0, 0 )
shape = SubResource( 4 )

[node name="RB_Bowl5" type="RigidBody" parent="." index="8"]
editor/display_folded = true
collision_layer = 16
collision_mask = 0
can_sleep = false

[node name="CollisionShape" type="CollisionShape" parent="RB_Bowl5" index="0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.7 )
shape = SubResource( 5 )

[node name="RB_Bowl6" type="RigidBody" parent="." index="9"]
editor/display_folded = true
collision_layer = 16
collision_mask = 0
can_sleep = false

[node name="CollisionShape" type="CollisionShape" parent="RB_Bowl6" index="0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.7 )
shape = SubResource( 6 )
